图片连接修改.

--- a/app/templates/main/misc/post_footer.html
+++ b/app/templates/main/misc/post_footer.html
@@ -20,7 +20,7 @@
         </a>                  
         <br>
       <!-- weixin -->
-        <img src="http://or3t8xowf.bkt.clouddn.com/weixin-pay.jpg" title="Donate">
+        <img src="http://or3t8xowf.bkt.clouddn.com/weixin-pay.jpg?imageView2/1/w/200/h/200/q/100" title="Donate">
     </div>
     <!-- donate --> 
     
@@ -33,7 +33,7 @@
     <!-- donate -->
     <div class ="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
         <p>{{ wechat_msg }} <i class="fa fa-weixin" aria-hidden="true"></i></p>
-        <img src="http://or3t8xowf.bkt.clouddn.com/gevin-view.jpg.jpg" title="GevinView">
+        <img src="http://or3t8xowf.bkt.clouddn.com/gevin-view.jpg.jpg?imageView2/1/w/200/h/200/q/100" title="GevinView">
     </div>
     
 </div>
